# alzheimer-model

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.cpu.txt  requirements.gpu.txt  setup.sh
demo/: CerebrA_LabelDetails.csv  masking.py  streamlit_demo.py
models/: dataset.py
models/alexnet/: model.py  train.py
models/classic_models/: classic_model_training_testing.py
models/classifier3D/: model.py
models/core/: batchtransform.py  dataset.py  preprocess.py  train.py
models/densenet/: dataset.py  model.py  train.py
models/eval/: dataset.py  eval.py
models/icae/: config.yaml  dataset.py  model.py  train.py
models/regression_alexnet/: model.py  train.py
models/regression_resnet/: dataset.py  model.py  train.py
models/resnet/: model.py  train.py
models/unet_autoencoder/: dataset.py  model.py  train.py  unet_encoder.py
models/vanilla_vit/: dataset.py  model.py  train.py
models/vit/: dataset.py  model.py  train.py
models/vit_age_gender/: dataset.py  model.py  train.py
research/: 20230319_example.py  20230319_trypydicom.py  20230325_trynipy.py  20230507_fromniitotorch.py  20230516_explorenii.py  20230605_tryclassifier3d.py  20230605_trydataset.py  20230812_hdf5_files.py  20230829_try_a_model.py  20230829_trypmrc.py  20230902_modelgenesis.py  20230905_batchtransf.py  20230905_modelgenesis.py  20230905_unetencoder.py  20230912_autoencoder.py  20230916_embeddings.py  20230917_captum.py  20230917_unet3d.py  20230924_medicalnet.py  20231021_martindyrba.py  20231024_convnet.py  20231101_datawrangling.py  20231106_logger.py  20231119_captum.py  20231125_testthemodel.py  20231126_find_model.py  20231208_icae.py  20231208_resnet.py  20231209_icae_weights.py  20231210_new_conv_layer.py  20231226_vit.py  20231227_cct.py  20240106_gender_age.py  20240106_regression.py  20240107_resnet.py  20240330_test_set.py  20240608_eval_ds.py  20240731_monai.py  20240831_check_ds.py  20240913_check_val.py  (+11 more)
(+50 files in other folders)
