[tool.poetry]
name = "alzheimer-model"
version = "0.1.0"
description = "Machine learning model for reccognizing amyloid deposits on the brain cortex"
authors = []
packages = [
    { include = "models" },
    { include = "research" },
]

[tool.poetry.dependencies]
python = "^3.9.7"
pandas = "^1.5.0"
numpy = "^1.23.0"
pydicom = "^2.3.1"
matplotlib = "^3.7.1"
h5py = "^3.9.0"
datetime = "^5.2"
tensorboard = "^2.14.0"
boto3 = "^1.28.41"
ipykernel = "^6.25.2"
h5pyd = "^0.15.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^3.9.2"
isort = "^5.9.1"
pytest = "^6.2.4"
ipykernel = "^6.0.1"
ipython = "^7.25.0"
ipdb = "^0.13.9"
mypy = "^0.910"
python-dotenv = "^0.18.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py38']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"